# aichain

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml  wiki.yml
aichain/agent/: _agent.py  _memory.py  _result.py
aichain/chain/: _chain.py
aichain/clients/: __init__.py  _deepseek.py  _perplexity.py
aichain/models/: _anthropic.py  _deepseek.py  _google.py  _kimi.py  _openai.py  _perplexity.py  _qwen.py  _registry.py  _xai.py
aichain/pool/: __init__.py
aichain/skills/: __init__.py  _adapters.py  _skill.py
aichain/tools/: __init__.py  imgbb.py  section_context.py
docs/: index.md
docs/agents/: agent-as-chain-step.md  configuration.md  memory.md  observability.md  overview.md
docs/cookbooks/: image-pipeline.md  index.md  long-document.md  multi-provider-routing.md  rag.md  research-agent.md  translate-and-publish.md
docs/design/: image-edit.md  roadmap-1.4.4-1.5.2.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/primitives/: chain.md  models.md  pool.md  skills.md  state.md  tools.md
docs/reference/: changelog.md  environment-variables.md  index.md  model-registry.md  yaml-schema.md
docs/tools-reference/: brave-search.md  deepl.md  index.md  late.md  markitdown.md  mistletoe.md  openai-web-search.md  perplexity-search.md  section-context.md  serp-api.md  weasyprint.md
examples/: 01_skill.py  02_skill_models.py  03_skill_multimodal.py  04_skill_save_load.py  05_tool_convert.py  06_tool_mcp.py  07_tool_custom.py  08_chain.py  09_chain_tool_skill.py  10_chain_save_load.py  11_pool.py  12_pool_chain.py  13_agent.py  14_agent_tools.py  15_agent_orchestrator.py  16_debug.py  17_chain_human_input.py  18_agent_external_trigger.py  19_image_edit.py  20_observability.py  21_multi_turn.py  README.md  agent_research.py  booking_api.py  chain_summarize_translate.py  json_schema_cross_provider.py  logo_creation.py  mcp_tool.py  qwen_skills.py  save_and_load.py  sectional_document.py  template_variables.py  text_to_image.py  text_to_text.py  text_to_text_reasoning.py
scripts/: build.sh  publish.sh  release.sh  sync_wiki.py  test.sh
tests/: conftest.py  test_audit_fixes.py  test_family_equivalence.py  test_misc_robustness.py  test_model_layer_golden.py  test_provider_data.py  test_step_boundary.py
tests/agent/: test_agent.py  test_budget.py  test_honest_success.py  test_send_seam.py
tests/chain/: test_chain.py
tests/clients/: test_anthropic.py  test_base.py  test_bfl.py  test_deepseek.py  test_errors.py  test_google.py  test_image_edit.py  test_kimi.py  test_openai.py  test_perplexity.py  test_qwen.py  test_qwen_image.py  test_recraft.py  test_reve.py  test_transport.py  test_xai.py
tests/models/: test_models_features.py  test_models_image_to_text.py  test_models_text_to_image.py  test_models_text_to_text.py
tests/skills/: test_adapters.py  test_multi_turn.py  test_skill.py  (+1 more)
yait-aichain/: _client.py  _role.py
yait_aichain/: __init__.py  _chain.py  _client.py  _constants.py  _events.py  _role.py  _template.py
(+130 files in other folders)
