[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yait-aichain"
version = "1.0.2"
description = "One interface. 8 providers. 57 models. Text, images, vision, RAG, agents, parallel pipelines."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "YAIT" }]
requires-python = ">=3.10"

dependencies = [
    "urllib3>=2.0",
]

[project.optional-dependencies]
convert = ["markitdown"]
yaml    = ["pyyaml"]
mcp     = ["fastmcp"]
all     = ["markitdown", "pyyaml", "fastmcp"]

[project.urls]
Homepage   = "https://github.com/yaitio/aichain"
Repository = "https://github.com/yaitio/aichain"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests*",
    "examples*",
    "docs*"
]