[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yait-aichain"
version = "1.4.0"
description = "One interface. 10 providers. 77 models. Text, image generation & editing, vision, RAG, agents, parallel pipelines."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "YAIT" }]
requires-python = ">=3.10"

dependencies = [
    "urllib3>=2.0",
]

[project.optional-dependencies]
convert = ["markitdown"]
yaml    = ["pyyaml"]
mcp     = ["fastmcp"]
all     = ["markitdown", "pyyaml", "fastmcp"]

[project.urls]
Homepage   = "https://github.com/yaitio/aichain"
Repository = "https://github.com/yaitio/aichain"

[tool.setuptools.packages.find]
where = ["."]
include = ["yait_aichain*"]

[tool.setuptools.package-data]
"yait_aichain.models" = ["providers/*.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"