[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yait-aichain"
dynamic = ["version"]            # single source of truth: yait_aichain.__version__
description = "One interface. 11 providers. 78 models. Text, image generation & editing, vision, RAG, agents, parallel pipelines."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "YAIT" }]
requires-python = ">=3.10"

dependencies = [
    "urllib3>=2.0",
]

[project.optional-dependencies]
convert = ["markitdown"]
yaml    = ["pyyaml"]
mcp     = ["fastmcp"]
all     = ["markitdown", "pyyaml", "fastmcp"]

[project.urls]
Homepage   = "https://github.com/yaitio/aichain"
Repository = "https://github.com/yaitio/aichain"

[tool.setuptools.packages.find]
where = ["."]
include = ["yait_aichain*"]

[tool.setuptools.package-data]
"yait_aichain.models" = ["providers/*.toml"]

# Version is read from yait_aichain/__init__.py (__version__) — one place to bump.
[tool.setuptools.dynamic]
version = { attr = "yait_aichain.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"